try fix overflowing body

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ time, mark, audio, video {
 	vertical-align: baseline;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  overflow-x: hidden;
 }
 
 article, aside, details, figcaption, figure, 
